# NihongoNavigatorBot

./: CMakeLists.txt  README.md  botcommander.cc  botcommander.hpp  callback.cc  commands.cc  config.h.in  eventsmanager.cc  eventsmanager.hpp  usermanager.cc  usermanager.hpp  wakabot.cc  wakabot.service
commands/: command_explain.cc  command_global.cc  command_quiz.cc  command_search.cc
commands/quiz/: kana_reading.cc  listening.cc  numerals.cc  word_meaning.cc  word_reading.cc
